Closed Bug 464986 Opened 16 years ago Closed 16 years ago

TM: Crash trying to compile a trace generated from stdin in debug build

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Waldo, Assigned: Waldo)

Details

(Keywords: crash)

Attachments

(1 file)

      No description provided.
Attachment #348255 - Flags: review?(danderson)
Attachment #348255 - Flags: review?(danderson) → review+
Fixed in TM repo.
Summary: Crash trying to compile a trace generated from stdin in debug build → TM: Crash trying to compile a trace generated from stdin in debug build
...and in m-c.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
Flags: in-litmus-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: