Bug 464986 - Crash trying to compile a trace generated from stdin in debug build.  r=danderson